fix: correction orthographe

--- a/notebooks/clean_data.ipynb
+++ b/notebooks/clean_data.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "id": "7d186979-1f55-420d-b52e-ad30657ecc2c",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "id": "f936cc5a-0789-4109-8459-7746cf3cb93f",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
        "4           {'text': 'en 1850', 'answer_start': 648}  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "id": "07e05752-1ff7-4223-8193-3c7894082e01",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "49          {'text': 'un lundi', 'answer_start': 370}  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "efb6b25d-7f1a-4658-b745-7db62e9943dd",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "17046b8b-36ef-4938-9dd9-e88213ff6b4a",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
        "Name: answer, dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "180527be-80e8-41d0-9e09-d6116080eba8",
    "metadata": {},
    "outputs": [
@@ -431,7 +431,7 @@
        " 370]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "id": "0e745a8c-4f96-4d0c-be96-1f156ed2df54",
    "metadata": {},
    "outputs": [
@@ -504,9 +504,9 @@
    "id": "2223b50f-8bbb-49a9-bd43-9c34815df512",
    "metadata": {},
    "source": [
-    "#### Cette méthode ne semble par appropriée car il se passe le contraire, comme les index sont très variés, il sont tous uniques, alors que là où il y a des index ç -1, ils sont plusieurs donc c'est là où le pic est le plus haut. \n",
+    "Cette méthode ne semble par appropriée car il se passe le contraire, comme les index sont très variés, il sont tous uniques, alors que là où il y a des index ç -1, ils sont plusieurs donc c'est là où le pic est le plus haut. \n",
     "\n",
-    "#### Si nous appliquons la détection des valeurs aberrantes sur ces données, on va plutôt être amené à supprimer la valeur qui se trouve à l'index 5000 plutôt que les index situés à -1."
+    "Si nous appliquons la détection des valeurs aberrantes sur ces données, on va plutôt être amené à supprimer la valeur qui se trouve à l'index 5000 plutôt que les index situés à -1."
    ]
   },
   {
@@ -514,12 +514,12 @@
    "id": "84afa684-b836-4222-a31b-066a73e2fe47",
    "metadata": {},
    "source": [
-    "## b. Essaie de détection des outliers sur la longueurs des contextes (colonne content dans notre csv)"
+    "## b. Essai de détection des outliers sur la longueurs des contextes (colonne content dans notre csv)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "id": "10fb45ae-d5e2-4f58-a82d-cd0335f65261",
    "metadata": {},
    "outputs": [
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 12,
    "id": "9d30abb4-d17e-4f32-9fed-1d8bfec831ae",
    "metadata": {},
    "outputs": [
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 13,
    "id": "5377b50e-fc45-499e-b163-9526fde275a3",
    "metadata": {},
    "outputs": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 14,
    "id": "fad0998a-1ea8-4f6a-a931-1a952e2d63e2",
    "metadata": {},
    "outputs": [
@@ -690,15 +690,18 @@
    "id": "5b504bca-c406-45f2-9617-23dc6d92e00b",
    "metadata": {},
    "source": [
-    "#### Ce graphique permet d'observer une nette distinction entre les valeurs en dessous de 3500 caractères et celles au dessus. \n",
-    "#### La borne supérieure située à 3500.5 que nous avons trouvé dans les calculs précédents semblent corrects.\n",
-    "#### Comme nous avons trouvé les données aberrantes par rapport aux longueurs des contenus, au nombre de 4, nous allons pouvoir commencer à nettoyer notre corpus en les supprimant.\n",
-    "#### La borne inférieure est en dessous de la longueur minimale que nous pouvons avoir dans le corpus, donc aucune autre donnée aberrante n'est à noter dans ces conditions.\n"
+    "Ce graphique permet d'observer une nette distinction entre les valeurs en dessous de 3500 caractères et celles au dessus. \n",
+    "\n",
+    "La borne supérieure située à 3500.5 que nous avons trouvé dans les calculs précédents semblent corrects.\n",
+    "\n",
+    "Comme nous avons trouvé les données aberrantes par rapport aux longueurs des contenus, au nombre de 4, nous allons pouvoir commencer à nettoyer notre corpus en les supprimant.\n",
+    "\n",
+    "La borne inférieure est en dessous de la longueur minimale que nous pouvons avoir dans le corpus, donc aucune autre donnée aberrante n'est à noter dans ces conditions.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 15,
    "id": "f5ff6af8-95a6-45b7-897a-4048f1f9c6c0",
    "metadata": {},
    "outputs": [
@@ -1297,7 +1300,7 @@
        "49          {'text': 'un lundi', 'answer_start': 370}  "
       ]
      },
-     "execution_count": 134,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1333,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 16,
    "id": "7a1b1e45-6794-44b7-a395-ec72813e9604",
    "metadata": {},
    "outputs": [
@@ -1389,7 +1392,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1404,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 17,
    "id": "f2f37c91-0cbf-4bea-a80b-427fbdeb15c8",
    "metadata": {},
    "outputs": [
@@ -2003,7 +2006,7 @@
        "49          {'text': 'un lundi', 'answer_start': 370}  "
       ]
      },
-     "execution_count": 138,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2017,7 +2020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 18,
    "id": "e5a451b4-72bd-42a3-ba1c-3643e1f68e74",
    "metadata": {},
    "outputs": [
@@ -2046,7 +2049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 32,
    "id": "2a98b3f0-7eb0-4e67-8de9-02b2fc43b59b",
    "metadata": {},
    "outputs": [],
