fix: application de black aux notebooks

--- a/notebooks/clean_data.ipynb
+++ b/notebooks/clean_data.ipynb
@@ -28,10 +28,11 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "\n",
     "corpus = pd.read_csv(\"../data/clean/datas_chat.csv\")\n",
     "\n",
-    "# Pour afficher tout le corpus, décommenter la ligne suivante : \n",
-    "#corpus"
+    "# Pour afficher tout le corpus, décommenter la ligne suivante :\n",
+    "# corpus"
    ]
   },
   {
@@ -472,10 +473,10 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# on va afficher ces résultats dans un graphique avec matplotlib \n",
+    "# on va afficher ces résultats dans un graphique avec matplotlib\n",
     "# pour mieux visualiser la répartition de ces chiffres\n",
     "\n",
-    "# on va débord compter la fréquence de chaque index \n",
+    "# on va débord compter la fréquence de chaque index\n",
     "# dico des fréquences\n",
     "frequences = {}\n",
     "\n",
@@ -491,12 +492,12 @@
     "# liste de leurs fréquences\n",
     "frequence = frequences.values()\n",
     "\n",
-    "# création du graphique \n",
+    "# création du graphique\n",
     "plt.title(\"Fréquence des index des réponses de notre corpus\")\n",
     "plt.bar(index, frequence, width=25)\n",
-    "plt.xlabel('Index')\n",
-    "plt.ylabel('Fréquence')\n",
-    "plt.show()\n"
+    "plt.xlabel(\"Index\")\n",
+    "plt.ylabel(\"Fréquence\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -538,22 +539,22 @@
     "# Nous allons d'abord afficher les longueurs de nos contextes dans un graphique\n",
     "\n",
     "# liste des ids de notre corpus :\n",
-    "ids = list(corpus['id'])\n",
+    "ids = list(corpus[\"id\"])\n",
     "\n",
-    "# liste des contenus : \n",
-    "contents = list(corpus['content'])\n",
+    "# liste des contenus :\n",
+    "contents = list(corpus[\"content\"])\n",
     "\n",
-    "# liste des longueurs des contenus : \n",
+    "# liste des longueurs des contenus :\n",
     "len_contents = []\n",
     "for content in contents:\n",
     "    longeur = len(content)\n",
     "    len_contents.append(longeur)\n",
     "\n",
-    "# création du graphique \n",
+    "# création du graphique\n",
     "plt.title(\"Répartition des longueurs des contenus en fonction des ids du corpus\")\n",
     "plt.bar(ids, len_contents, width=0.8)\n",
-    "plt.xlabel('ids')\n",
-    "plt.ylabel('Longueur en nombre de caractères')\n",
+    "plt.xlabel(\"ids\")\n",
+    "plt.ylabel(\"Longueur en nombre de caractères\")\n",
     "plt.show()"
    ]
   },
@@ -590,27 +591,41 @@
     }
    ],
    "source": [
-    "# mettre dans l'ordre ascendant les longueurs de notre liste : \n",
+    "# mettre dans l'ordre ascendant les longueurs de notre liste :\n",
     "len_contents.sort()\n",
     "\n",
-    "# calcul de la médiane : \n",
+    "# calcul de la médiane :\n",
     "mediane = len(len_contents) / 2\n",
     "\n",
-    "print(\"La médiane est située à\", mediane, \", correspondant à la valeur\", len_contents[int(mediane)-1],\".\\n\")\n",
+    "print(\n",
+    "    \"La médiane est située à\",\n",
+    "    mediane,\n",
+    "    \", correspondant à la valeur\",\n",
+    "    len_contents[int(mediane) - 1],\n",
+    "    \".\\n\",\n",
+    ")\n",
     "\n",
-    "# calcul des quartiles : \n",
+    "# calcul des quartiles :\n",
     "q1 = mediane / 2\n",
-    "valeur_q1 = len_contents[int(q1)-1]\n",
+    "valeur_q1 = len_contents[int(q1) - 1]\n",
     "q3 = mediane + q1\n",
-    "valeur_q3 = len_contents[int(q3)-1]\n",
+    "valeur_q3 = len_contents[int(q3) - 1]\n",
     "\n",
-    "print(\"Le premier quartile est située à\", q1, \", correspondant à la valeur\", valeur_q1, \".\\n\")\n",
-    "print(\"Le 3eme quartile est située à\", q3, \", correspondant à la valeur\", valeur_q3, \".\\n\")\n",
+    "print(\n",
+    "    \"Le premier quartile est située à\",\n",
+    "    q1,\n",
+    "    \", correspondant à la valeur\",\n",
+    "    valeur_q1,\n",
+    "    \".\\n\",\n",
+    ")\n",
+    "print(\n",
+    "    \"Le 3eme quartile est située à\", q3, \", correspondant à la valeur\", valeur_q3, \".\\n\"\n",
+    ")\n",
     "\n",
     "# Calcul de l'écart interquartile\n",
     "ecart = valeur_q3 - valeur_q1\n",
     "\n",
-    "print(\"L'écart interquartile est de\", ecart, \".\\n\")\n"
+    "print(\"L'écart interquartile est de\", ecart, \".\\n\")"
    ]
   },
   {
@@ -637,7 +652,7 @@
     "\n",
     "# Calcul de la borne supérieure : mise en évidence de valeurs aberrantes élevées.\n",
     "borne_sup = valeur_q3 + (1.5 * ecart)\n",
-    "print(\"La borne supérieure est\", borne_sup, \".\\n\")\n"
+    "print(\"La borne supérieure est\", borne_sup, \".\\n\")"
    ]
   },
   {
@@ -664,7 +679,7 @@
     "for tranche in [500, 1000, 1500, 2000, 2500, 3000, 3500, 4000, 4500, 5000, 5500]:\n",
     "    # on met à 0 chaque effectif de tranche\n",
     "    dico_tranche[f\"{tranche - 500} - {tranche}\"] = 0\n",
-    "    \n",
+    "\n",
     "    # on parcourt toute la liste de longueurs pour chaque tranche\n",
     "    for longueur in len_contents:\n",
     "        if (tranche - 500) < longueur <= tranche:\n",
@@ -677,11 +692,13 @@
     "liste_effectifs = dico_tranche.values()\n",
     "\n",
     "# création du graphique avec les effectif par tranche\n",
-    "plt.figure(figsize = (15, 5))\n",
-    "plt.title(\"Répartition des effectifs des longueurs des contenus par tranche de 500 caractères.\")\n",
+    "plt.figure(figsize=(15, 5))\n",
+    "plt.title(\n",
+    "    \"Répartition des effectifs des longueurs des contenus par tranche de 500 caractères.\"\n",
+    ")\n",
     "plt.bar(liste_tranches, liste_effectifs, width=0.8)\n",
-    "plt.xlabel('Nombre de caractères')\n",
-    "plt.ylabel('Effectifs')\n",
+    "plt.xlabel(\"Nombre de caractères\")\n",
+    "plt.ylabel(\"Effectifs\")\n",
     "plt.show()"
    ]
   },
@@ -1308,17 +1325,17 @@
    "source": [
     "# Suppression des données aberrantes avec la fonction .drop() de pandas\n",
     "for i in list(corpus.index):\n",
-    "    # le i eme contexte : \n",
+    "    # le i eme contexte :\n",
     "    contexte = corpus.content[i]\n",
-    "    # la longueur du i eme contexte : \n",
+    "    # la longueur du i eme contexte :\n",
     "    len_contexte = len(contexte)\n",
     "    # si longueur plus grande que la borne supérieur alors on supprime la ligne\n",
     "    if len_contexte > 3500:\n",
-    "        corpus = corpus.drop(i, axis='index')\n",
+    "        corpus = corpus.drop(i, axis=\"index\")\n",
     "    else:\n",
     "        continue\n",
     "\n",
-    "# Voici le corpus sous les outliers : \n",
+    "# Voici le corpus sous les outliers :\n",
     "corpus"
    ]
   },
@@ -1398,7 +1415,7 @@
     }
    ],
    "source": [
-    "# Pour voir s'il y a des doublons, il y a la fonction .duplicated() de pandas : \n",
+    "# Pour voir s'il y a des doublons, il y a la fonction .duplicated() de pandas :\n",
     "corpus.duplicated()\n",
     "\n",
     "# False = pas de doublon\n",
@@ -2012,7 +2029,7 @@
     }
    ],
    "source": [
-    "# Pour retirer les doublons, il y a la fonction .drop_duplcates() de pandas : \n",
+    "# Pour retirer les doublons, il y a la fonction .drop_duplcates() de pandas :\n",
     "corpus.drop_duplicates()\n",
     "\n",
     "# Ici c'est inutile car il n'y a aucun doublons dans notre corpus."
@@ -2035,7 +2052,11 @@
     }
    ],
    "source": [
-    "print(\"La taille de notre corpus est de\", len(corpus), \"lignes des données après nettoyage des outliers et des doublons.\")\n",
+    "print(\n",
+    "    \"La taille de notre corpus est de\",\n",
+    "    len(corpus),\n",
+    "    \"lignes des données après nettoyage des outliers et des doublons.\",\n",
+    ")\n",
     "print(\"La nettoyage a donc retiré\", 50 - len(corpus), \"lignes de données.\\n\")"
    ]
   },
@@ -2054,8 +2075,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sauvegarde dans le dossier data/clean/ : \n",
-    "corpus.to_csv('../data/clean/clean_datas_chat.csv', index=False) "
+    "# Sauvegarde dans le dossier data/clean/ :\n",
+    "corpus.to_csv(\"../data/clean/clean_datas_chat.csv\", index=False)"
    ]
   }
  ],
