--- a/notebooks/evaluate_data.ipynb
+++ b/notebooks/evaluate_data.ipynb
@@ -40,22 +40,22 @@
     "#!pip install evaluate\n",
     "from evaluate import load\n",
     "\n",
-    "# on importe la métrique de squad \n",
+    "# on importe la métrique de squad\n",
     "squad_metric = load(\"squad\")\n",
     "\n",
-    "# Nous avons d'une part la liste des prédictions données par un modèle : \n",
+    "# Nous avons d'une part la liste des prédictions données par un modèle :\n",
     "predictions = []\n",
-    "# D'autre part la liste des réponses de références, dans le même ordre : \n",
+    "# D'autre part la liste des réponses de références, dans le même ordre :\n",
     "references = []\n",
     "\n",
-    "# Les prédictions et les références doivent avoir les formes suivantes : \n",
+    "# Les prédictions et les références doivent avoir les formes suivantes :\n",
     "# predictions = [{'prediction_text': '1976', 'id': '56e10a3be3433e1400422b22'}]\n",
     "# references = [{'answers': {'answer_start': [97], 'text': ['1976']}, 'id': '56e10a3be3433e1400422b22'}]\n",
     "\n",
     "# On calcule le résultat de F1-Score entre nos prédictions et nos références :\n",
     "results = squad_metric.compute(predictions=predictions, references=references)\n",
     "\n",
-    "# Affichage des résultats : \n",
+    "# Affichage des résultats :\n",
     "result"
    ]
   },
@@ -117,7 +117,8 @@
    "source": [
     "# site inspiration code : https://thepythoncode.com/article/calculate-word-error-rate-in-python\n",
     "\n",
-    "def calcul_wer(reference:str, prediction:str):\n",
+    "\n",
+    "def calcul_wer(reference: str, prediction: str):\n",
     "    \"\"\"\n",
     "    Fonction qui calcule le taux d'erreur mot entre une référence et une prédiction.\n",
     "    Parameters\n",
@@ -134,25 +135,33 @@
     "    # Récupération de liste de mot dans la référence et la prédiciton\n",
     "    ref_words = reference.split()\n",
     "    pred_words = prediction.split()\n",
-    "    \n",
+    "\n",
     "    # On compte le nombre de substitutions, délétions et insertions.\n",
     "    substitutions = sum(1 for ref, pred in zip(ref_words, pred_words) if ref != pred)\n",
     "    deletions = len(ref_words) - len(pred_words)\n",
     "    insertions = len(pred_words) - len(ref_words)\n",
-    "    \n",
+    "\n",
     "    # Calcul du combre total de mots dans la référence\n",
     "    total_words = len(ref_words)\n",
-    "    \n",
-    "    # Calcul du taux d'erreur mot : \n",
+    "\n",
+    "    # Calcul du taux d'erreur mot :\n",
     "    wer = (substitutions + deletions + insertions) / total_words\n",
-    "    \n",
+    "\n",
     "    return wer\n",
+    "\n",
     "\n",
     "reference_text = \"la sympathie\"\n",
     "prediction_text = \"sympathie\"\n",
-    " \n",
+    "\n",
     "wer_score = calcul_wer(reference_text, prediction_text)\n",
-    "print(\"Le taux d'erreur mot (WER) entre '\", reference_text, \"' et '\", prediction_text, \"' est :\", wer_score)"
+    "print(\n",
+    "    \"Le taux d'erreur mot (WER) entre '\",\n",
+    "    reference_text,\n",
+    "    \"' et '\",\n",
+    "    prediction_text,\n",
+    "    \"' est :\",\n",
+    "    wer_score,\n",
+    ")"
    ]
   },
   {
@@ -166,13 +175,13 @@
     "# et la liste des vraies réponses de notre corpus\n",
     "# les deux listes ci-dessous sont vides, comme nous ne lançons aucun modèle\n",
     "\n",
-    "# liste des vraies réponses, qu'on récupère de notre corpus : \n",
+    "# liste des vraies réponses, qu'on récupère de notre corpus :\n",
     "reponses_references = []\n",
     "\n",
-    "# liste des réponses produites par le modèle : \n",
+    "# liste des réponses produites par le modèle :\n",
     "reponses_predites = []\n",
     "\n",
-    "# on applique notre fonction de calcul du WER à l'ensemble des réponses : \n",
+    "# on applique notre fonction de calcul du WER à l'ensemble des réponses :\n",
     "for i in range(len(reponses_references)):\n",
     "    calcul_wer(reponses_references[i], reponses_predites[i])"
    ]
@@ -240,7 +249,7 @@
     }
    ],
    "source": [
-    "# Illustration de comment récupérer l'ensemble des réponses de notre corpus : \n",
+    "# Illustration de comment récupérer l'ensemble des réponses de notre corpus :\n",
     "\n",
     "import pandas as pd\n",
     "import re\n",
@@ -256,10 +265,10 @@
     "    if len(liste_reponse) != 0:\n",
     "        reponse = liste_reponse[0]\n",
     "    else:\n",
-    "        reponse = ''\n",
+    "        reponse = \"\"\n",
     "    reponses_references.append(reponse)\n",
     "\n",
-    "reponses_references\n"
+    "reponses_references"
    ]
   }
  ],
