--- a/notebooks/significativity_test.ipynb
+++ b/notebooks/significativity_test.ipynb
@@ -735,7 +735,7 @@
    "source": [
     "# On récupère les longueurs des contextes dans une liste.\n",
     "longueurs_contextes = []\n",
-    "dataset[\"context_length\"]=None\n",
+    "dataset[\"context_length\"] = None\n",
     "for i, element in enumerate(dataset.itertuples()):\n",
     "    doc = nlp(element.content)\n",
     "    longueurs_contextes.append(len(doc))\n",
@@ -759,7 +759,7 @@
    "source": [
     "# On récupère les longueurs des réponses dans une autre liste.\n",
     "longueurs_reponses = []\n",
-    "dataset[\"answer_length\"]=None\n",
+    "dataset[\"answer_length\"] = None\n",
     "for i, element in enumerate(dataset.itertuples()):\n",
     "    doc = nlp(element.answer)\n",
     "    longueurs_reponses.append(len(doc))\n",
@@ -807,17 +807,20 @@
     "for mode in [\"two-sided\", \"greater\", \"less\"]:\n",
     "    print(\"-\" * 32)\n",
     "    print(\"mode:\", mode)\n",
-    "    corr, p = scipy.stats.pearsonr(longueurs_contextes, longueurs_reponses, alternative=mode)\n",
+    "    corr, p = scipy.stats.pearsonr(\n",
+    "        longueurs_contextes, longueurs_reponses, alternative=mode\n",
+    "    )\n",
     "    print(f\"Pearson: {corr:+.4e}; p-value: {p:+.4e}\")\n",
-    "    corr, p = scipy.stats.spearmanr(longueurs_contextes, longueurs_reponses, alternative=mode)\n",
+    "    corr, p = scipy.stats.spearmanr(\n",
+    "        longueurs_contextes, longueurs_reponses, alternative=mode\n",
+    "    )\n",
     "    print(f\"Spearman: {corr:+.4e}; p-value: {p:+.4e}\")\n",
     "\n",
     "plt.scatter(longueurs_reponses, longueurs_contextes)\n",
     "plt.xlabel(\"Longueurs des réponses en nombre de caractères\")\n",
     "plt.ylabel(\"Longeurs des contextes en nombre de caractères\")\n",
     "plt.tight_layout()\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
@@ -961,11 +964,11 @@
     }
    ],
    "source": [
-    "\n",
     "def lancer_n_pieces(n=50, p=0.5):\n",
     "    a = np.random.random(n)\n",
     "    a = np.array(a >= p, dtype=np.int8)\n",
     "    return a\n",
+    "\n",
     "\n",
     "n = 4096 * 4\n",
     "x = []\n",
@@ -981,7 +984,7 @@
     "plt.xlabel(\"Probability of heads\")\n",
     "plt.ylabel(\"p-value\")\n",
     "plt.title(f\"Number of throws: {n}\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -1056,10 +1059,10 @@
     "a_delta_to_mu_norm = a_delta_to_mu / np.std(a)\n",
     "b_delta_to_mu_norm = b_delta_to_mu / np.std(b)\n",
     "b += a_delta_to_mu_norm * 0.015\n",
-    "plt.scatter(a,b)\n",
+    "plt.scatter(a, b)\n",
     "plt.show()\n",
     "\n",
-    "corr, p = scipy.stats.pearsonr(a,b)\n",
+    "corr, p = scipy.stats.pearsonr(a, b)\n",
     "print(f\"correlation: {corr:.4f}; p-value: {p:.4f}\")"
    ]
   }
