--- a/notebooks/visualise_data.ipynb
+++ b/notebooks/visualise_data.ipynb
@@ -67,10 +67,10 @@
     "from datasets import load_dataset\n",
     "\n",
     "# On importe le corpus de référence.\n",
-    "dataset = load_dataset(\"rajpurkar/squad\", split='train')\n",
+    "dataset = load_dataset(\"rajpurkar/squad\", split=\"train\")\n",
     "dataset = dataset.to_pandas()\n",
     "\n",
-    "nlp = spacy.load(\"en_core_web_sm\")\n"
+    "nlp = spacy.load(\"en_core_web_sm\")"
    ]
   },
   {
@@ -100,14 +100,14 @@
     }
    ],
    "source": [
-    "dataset[\"context_length\"]=None\n",
+    "dataset[\"context_length\"] = None\n",
     "for i, element in enumerate(dataset.itertuples()):\n",
     "    doc = nlp(element.context)\n",
     "    dataset.loc[i, \"context_length\"] = len(doc)\n",
-    "    if i>200:\n",
+    "    if i > 200:\n",
     "        break\n",
     "\n",
-    "dataset[\"context_length\"].plot(kind=\"hist\")\n"
+    "dataset[\"context_length\"].plot(kind=\"hist\")"
    ]
   },
   {
@@ -137,11 +137,11 @@
     }
    ],
    "source": [
-    "dataset[\"answer_length\"]=None\n",
+    "dataset[\"answer_length\"] = None\n",
     "for i, element in enumerate(dataset.itertuples()):\n",
     "    doc = nlp(element.answers[\"text\"][0])\n",
     "    dataset.loc[i, \"answer_length\"] = len(doc)\n",
-    "    if i>200:\n",
+    "    if i > 200:\n",
     "        break\n",
     "\n",
     "dataset[\"answer_length\"].plot(kind=\"hist\")"
@@ -212,12 +212,13 @@
    ],
    "source": [
     "from collections import Counter\n",
+    "\n",
     "concat_context = []\n",
     "for i, element in enumerate(dataset.itertuples()):\n",
     "    doc = nlp(element.answers[\"text\"][0])\n",
     "    for token in doc:\n",
     "        concat_context.append(str(token))\n",
-    "    if i>200:\n",
+    "    if i > 200:\n",
     "        break\n",
     "\n",
     "concat_context_counter = Counter(concat_context)\n",
@@ -930,15 +931,15 @@
    "source": [
     "# On observe la répartition de la longueur des contextes.\n",
     "\n",
-    "dataset[\"context_length\"]=None\n",
+    "dataset[\"context_length\"] = None\n",
     "for i, element in enumerate(dataset.itertuples()):\n",
     "    doc = nlp(element.content)\n",
     "    dataset.loc[i, \"context_length\"] = len(doc)\n",
     "    # Condition d'arrêt qui n'est pas très utile ici car notre corpus fait 50 lignes.\n",
-    "    if i>200:\n",
+    "    if i > 200:\n",
     "        break\n",
     "\n",
-    "dataset[\"context_length\"].plot(kind=\"hist\")\n"
+    "dataset[\"context_length\"].plot(kind=\"hist\")"
    ]
   },
   {
@@ -972,12 +973,12 @@
     "import json\n",
     "\n",
     "# On observe la répartition de la longueur des réponses.\n",
-    "dataset[\"answer_length\"]=None\n",
+    "dataset[\"answer_length\"] = None\n",
     "for i, element in enumerate(dataset.itertuples()):\n",
     "    doc = nlp(element.answer)\n",
     "    dataset.loc[i, \"answer_length\"] = len(doc)\n",
     "    # Condition au cas où, mais pas utile car notre dataset fait 50 lignes.\n",
-    "    if i>200:\n",
+    "    if i > 200:\n",
     "        break\n",
     "\n",
     "dataset[\"answer_length\"].plot(kind=\"hist\")\n",
@@ -1033,13 +1034,14 @@
    ],
    "source": [
     "from collections import Counter\n",
+    "\n",
     "concat_context = []\n",
-    "# loi de Zipf sur l'ensemble des réponses du corpus : \n",
+    "# loi de Zipf sur l'ensemble des réponses du corpus :\n",
     "for i, element in enumerate(dataset.itertuples()):\n",
     "    doc = nlp(element.answer)\n",
     "    for token in doc:\n",
     "        concat_context.append(str(token))\n",
-    "    if i>200:\n",
+    "    if i > 200:\n",
     "        break\n",
     "\n",
     "concat_context_counter = Counter(concat_context)\n",
@@ -1074,14 +1076,15 @@
    ],
    "source": [
     "from collections import Counter\n",
+    "\n",
     "concat_context = []\n",
     "\n",
-    "# loi de Zipf sur l'ensemble des elements content du corpus : \n",
+    "# loi de Zipf sur l'ensemble des elements content du corpus :\n",
     "for i, element in enumerate(dataset.itertuples()):\n",
     "    doc = nlp(element.content)\n",
     "    for token in doc:\n",
     "        concat_context.append(str(token))\n",
-    "    if i>200:\n",
+    "    if i > 200:\n",
     "        break\n",
     "\n",
     "concat_context_counter = Counter(concat_context)\n",
