--- a/notebooks/open_data.ipynb
+++ b/notebooks/open_data.ipynb
@@ -32,7 +32,7 @@
     }
    ],
    "source": [
-    "with open(\"../data/raw/ronronnement.txt\", 'r') as file:\n",
+    "with open(\"../data/raw/ronronnement.txt\", \"r\") as file:\n",
     "    data = file.readlines()\n",
     "data"
    ]
@@ -120,7 +120,7 @@
    "source": [
     "import csv\n",
     "\n",
-    "with open(\"../data/clean/datas_chat.csv\", 'r') as file:\n",
+    "with open(\"../data/clean/datas_chat.csv\", \"r\") as file:\n",
     "    data = csv.reader(file, delimiter=\";\")\n",
     "    for row in data:\n",
     "        print(row)"
