--- a/notebooks/split_corpus.ipynb
+++ b/notebooks/split_corpus.ipynb
@@ -46,7 +46,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "corpus_df = pd.read_csv('../data/clean/clean_datas_chat.csv', sep=',')\n",
+    "corpus_df = pd.read_csv(\"../data/clean/clean_datas_chat.csv\", sep=\",\")\n",
     "\n",
     "# on stocke le tableau dans la variable corpus\n",
     "# ce format est celui manipuler avec la fonction train_test_split()\n",
@@ -75,10 +75,18 @@
     "\n",
     "# remainder = le reste des données qui seront ensuite divisées en train et dev\n",
     "# test = 20% du corpus qui constitue les données de test du modèle\n",
-    "remainder, test = train_test_split(corpus, test_size = 0.20, random_state = 0)\n",
+    "remainder, test = train_test_split(corpus, test_size=0.20, random_state=0)\n",
     "\n",
-    "print(\"Il y a 20% du corpus pour la partie test, ce qui représente\", len(test),\"données.\\n\")\n",
-    "print(\"Il reste 80% du corpus à diviser en train et dev, ce qui correspond à\", len(remainder), \"données.\\n\")\n"
+    "print(\n",
+    "    \"Il y a 20% du corpus pour la partie test, ce qui représente\",\n",
+    "    len(test),\n",
+    "    \"données.\\n\",\n",
+    ")\n",
+    "print(\n",
+    "    \"Il reste 80% du corpus à diviser en train et dev, ce qui correspond à\",\n",
+    "    len(remainder),\n",
+    "    \"données.\\n\",\n",
+    ")"
    ]
   },
   {
@@ -100,14 +108,22 @@
    ],
    "source": [
     "# dans les 80% du corpus restant, on souhaite que 10% soit pour le dev\n",
-    "# produit en croix pour connaitre ce que représente 10% de 80% sur 100% : \n",
+    "# produit en croix pour connaitre ce que représente 10% de 80% sur 100% :\n",
     "# (10*100)/80 = 12.5\n",
     "\n",
-    "# le dev correspond à test_size ici, on applique le split sur le reste cette fois-ci : \n",
-    "train, dev = train_test_split(remainder, test_size = 0.125, random_state = 0)\n",
+    "# le dev correspond à test_size ici, on applique le split sur le reste cette fois-ci :\n",
+    "train, dev = train_test_split(remainder, test_size=0.125, random_state=0)\n",
     "\n",
-    "print(\"Il y a 10% du corpus en dev, ce qui correspond à un total de\", len(dev), \"données.\\n\")\n",
-    "print(\"Il y a 70% du corpus en train, ce qui correspond à un total de\", len(train), \"données.\\n\")\n"
+    "print(\n",
+    "    \"Il y a 10% du corpus en dev, ce qui correspond à un total de\",\n",
+    "    len(dev),\n",
+    "    \"données.\\n\",\n",
+    ")\n",
+    "print(\n",
+    "    \"Il y a 70% du corpus en train, ce qui correspond à un total de\",\n",
+    "    len(train),\n",
+    "    \"données.\\n\",\n",
+    ")"
    ]
   },
   {
@@ -545,7 +561,7 @@
     }
    ],
    "source": [
-    "# Partie de train : \n",
+    "# Partie de train :\n",
     "pd.DataFrame(train)"
    ]
   },
@@ -724,7 +740,7 @@
     }
    ],
    "source": [
-    "# Partie de test : \n",
+    "# Partie de test :\n",
     "pd.DataFrame(test)"
    ]
   },
@@ -843,7 +859,7 @@
     }
    ],
    "source": [
-    "# Partie de dev : \n",
+    "# Partie de dev :\n",
     "pd.DataFrame(dev)"
    ]
   }
